--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   
   "pages": [
+
+    "pages/splash/splash",
     "pages/index/index",
     "pages/logs/logs",
 
@@ -18,9 +20,14 @@
 
 
   ],
+  
   "permission": {
-    "scope.userLocation": {
-      "desc": "你的位置信息将用于小程序地图展示"
+
+    "scope.userInfo": {
+      "desc": "获取您的用户信息，用于个性化展示"
+    },
+    "scope.subscribeMessage": {
+      "desc": "订阅消息权限，用于向您发送重要通知"
     }
   },
   "tabBar": {
@@ -58,7 +65,10 @@
   },
   "window": {
     "navigationBarTextStyle": "black",
-    "navigationStyle": "custom"
+    "navigationStyle": "custom",
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "My App"
   },
   "style": "v2",
   "rendererOptions": {
